--- a/Landing-page.html
+++ b/Landing-page.html
@@ -32,11 +32,13 @@
 		.nav-link:hover{
 			color: #ECF3F7;
 		}
-		#header-image{
+		#header-img{
 			opacity: 0.9;
 			display: inline-flex;
 			border-radius: 50%;
 			margin-left: 50px;
+			width: 225px;
+			height: 142px;
 		}
 		#contact-image{
 			margin-top: 50px;
@@ -97,7 +99,7 @@
 		 justify-content: center;
 		  }
 		 
-		   @media screen and (max-width: 400px){
+		   @media screen and (min-width: 400px;){
 		   	
 		   	#about{
 		   		font-size: 10px;
@@ -128,7 +130,7 @@
 		
 	
 <header id="header">
-	<nav id="nav-bar"><img id="header-image" src="C:\Users\brenda.zatarainc\Documents\Proyectos\Projects\logo.jpg">
+	<nav id="nav-bar"><img id="header-img" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_eApY5G9tmQ_TuAQjOTsRE_OhQe6MUngzkF6X30gVIoyjK3pk">
 		<div style="align-items: right; text-align: center;">
 			<a class="nav-link" href="#home">Home</a><a class="nav-link" href="#about">About</a><a class="nav-link" href="#contact">Contact</a>	
 
